# libusbwrap

./: CMakeLists.txt  Makefile  README  deps.mk  libusb.patch  libusbwrap.c  libusbwrap.h  libusbwrap.pc.in  misc.c  printConfig.c  private.h  unbounded_queue.c  unbounded_queue.h
example/: Makefile  main.c  random.h
include/makestuff/: libusbwrap.h
lsep/: CMakeLists.txt  README  main.c
src/: libusbwrap.c  misc.c  printConfig.c  private.h  unbounded_queue.c  unbounded_queue.h
tests/: Makefile  testCore.cpp
